--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.0",
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
     "angular-material": "^1.1.0",
     "angular-material-icons": "^0.7.1",
     "angular-messages": "^1.5.8",
-    "@uirouter/angularjs": "^1.0.0"
+    "angular-ui-bootstrap": "^2.5.0"
   },
   "eslintConfig": {
     "extends": "airbnb-base",
