--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.0",
     "angular": "^1.5.8",
-    "angular-animate": "^1.5.8",
+    "angular-animate": "^1.6.4",
     "angular-aria": "^1.5.8",
+    "angular-bootstrap-datetimepicker": "^1.1.4",
     "angular-material": "^1.1.0",
     "angular-material-icons": "^0.7.1",
     "angular-messages": "^1.5.8",
