--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "angular-material": "^1.1.0",
     "angular-material-icons": "^0.7.1",
     "angular-messages": "^1.5.8",
-    "angular-ui-bootstrap": "^2.5.0"
+    "angular-ui-bootstrap": "^2.5.0",
+    "jquery": "^3.2.1"
   },
   "eslintConfig": {
     "extends": "airbnb-base",
